--- a/index.html
+++ b/index.html
@@ -137,8 +137,8 @@
         </div>
         <div class="row homePageMargin">
             <div class="col-4">
-                <div class="row">
-                    <h1 class="whiteJ abrilFatfaceJ" style="width: 300px;">Popular Sandwiches</h1>
+                <div class="row" style="margin-top: 5px">
+                    <h1 class="whiteJ abrilFatfaceJ" style="width: 300px; line-height: 57px;">Popular Sandwiches</h1>
                 </div>
                 
 
@@ -155,6 +155,13 @@
                     <img src="./assets/banhMiCard1.png" class="card-img-top" alt="...">
                     <div class="card-body">
                         <p class="card-text sansCollectionJ sandwichJ2 sandwichTxtJ">#1 Favorite <span class="sandwichJ">Grilled Pork</span> $5.79</p>
+                        <div class="row starRowJ">
+                            <img class="star2J" src="./assets/Star.png" alt="">
+                            <img class="star2J" src="./assets/Star.png" alt="">
+                            <img class="star2J" src="./assets/Star.png" alt="">
+                            <img class="star2J" src="./assets/Star.png" alt="">
+                            <img class="star2J" src="./assets/Star.png" alt="">
+                        </div>
                     </div>
                 </div>
             </div>
@@ -163,6 +170,13 @@
                     <img src="./assets/banhMiCard2.png" class="card-img-top" alt="...">
                     <div class="card-body">
                         <p class="card-text sansCollectionJ sandwichJ2 sandwichTxtJ">#1 Diet Friendly <span class="sandwichJ">Vegetarian</span> $5.79</p>
+                        <div class="row starRowJ">
+                            <img class="star2J" src="./assets/Star.png" alt="">
+                            <img class="star2J" src="./assets/Star.png" alt="">
+                            <img class="star2J" src="./assets/Star.png" alt="">
+                            <img class="star2J" src="./assets/Star.png" alt="">
+                            <img class="star2J" src="./assets/Star.png" alt="">
+                        </div>
                     </div>
                 </div>
             </div>
@@ -171,6 +185,13 @@
                     <img src="./assets/BanhMiCard3.png" class="card-img-top" alt="...">
                     <div class="card-body">
                         <p class="card-text sansCollectionJ sandwichJ2 sandwichTxtJ">#1 Favorite <span class="sandwichJ">Grilled Pork</span> $5.79</p>
+                        <div class="row starRowJ">
+                            <img class="star2J" src="./assets/Star.png" alt="">
+                            <img class="star2J" src="./assets/Star.png" alt="">
+                            <img class="star2J" src="./assets/Star.png" alt="">
+                            <img class="star2J" src="./assets/Star.png" alt="">
+                            <img class="star2J" src="./assets/Star.png" alt="">
+                        </div>
                     </div>
                 </div>
             </div>
@@ -179,6 +200,13 @@
                     <img src="./assets/banhMiCard4.png" class="card-img-top" alt="...">
                     <div class="card-body">
                         <p class="card-text sansCollectionJ sandwichJ2 sandwichTxtJ">#1 Favorite <span class="sandwichJ">Grilled Pork</span> $5.79</p>
+                        <div class="row starRowJ">
+                            <img class="star2J" src="./assets/Star.png" alt="">
+                            <img class="star2J" src="./assets/Star.png" alt="">
+                            <img class="star2J" src="./assets/Star.png" alt="">
+                            <img class="star2J" src="./assets/Star.png" alt="">
+                            <img class="star2J" src="./assets/Star.png" alt="">
+                        </div>
                     </div>
                 </div>
             </div>
@@ -187,6 +215,13 @@
                     <img src="./assets/banhMiCard5.png" class="card-img-top" alt="...">
                     <div class="card-body">
                         <p class="card-text sansCollectionJ sandwichJ2 sandwichTxtJ">#1 Favorite <span class="sandwichJ">Grilled Pork</span> $5.79</p>
+                        <div class="row starRowJ">
+                            <img class="star2J" src="./assets/Star.png" alt="">
+                            <img class="star2J" src="./assets/Star.png" alt="">
+                            <img class="star2J" src="./assets/Star.png" alt="">
+                            <img class="star2J" src="./assets/Star.png" alt="">
+                            <img class="star2J" src="./assets/Star.png" alt="">
+                        </div>
                     </div>
                 </div>
             </div>
@@ -201,8 +236,8 @@
         </div>
         <div class="row homePageMargin">
             <div class="col-4">
-                <div class="row">
-                    <h1 class="whiteJ abrilFatfaceJ" style="width: 300px;">Popular Drinks</h1>
+                <div class="row" style="margin-top: 5px">
+                    <h1 class="whiteJ abrilFatfaceJ" style="width: 300px; line-height: 57px;">Popular Drinks</h1>
                 </div>
 
             </div>
@@ -218,8 +253,14 @@
                 <div class="card cardJ" style="width: 280px;">
                     <img src="./assets/drinkCard1.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's content.</p>
+                        <p class="card-text sansCollectionJ sandwichJ2 sandwichTxtJ">#1 Favorite <span class="sandwichJ">Grilled Pork</span> $5.79</p>
+                        <div class="row starRowJ">
+                            <img class="star2J" src="./assets/Star.png" alt="">
+                            <img class="star2J" src="./assets/Star.png" alt="">
+                            <img class="star2J" src="./assets/Star.png" alt="">
+                            <img class="star2J" src="./assets/Star.png" alt="">
+                            <img class="star2J" src="./assets/Star.png" alt="">
+                        </div>
                     </div>
                 </div>
             </div>
@@ -227,8 +268,14 @@
                 <div class="card cardJ" style="width: 280px;">
                     <img src="./assets/drinkCard2.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's content.</p>
+                        <p class="card-text sansCollectionJ sandwichJ2 sandwichTxtJ">#1 Favorite <span class="sandwichJ">Grilled Pork</span> $5.79</p>
+                        <div class="row starRowJ">
+                            <img class="star2J" src="./assets/Star.png" alt="">
+                            <img class="star2J" src="./assets/Star.png" alt="">
+                            <img class="star2J" src="./assets/Star.png" alt="">
+                            <img class="star2J" src="./assets/Star.png" alt="">
+                            <img class="star2J" src="./assets/Star.png" alt="">
+                        </div>
                     </div>
                 </div>
             </div>
@@ -236,17 +283,29 @@
                 <div class="card cardJ" style="width: 280px;">
                     <img src="./assets/drinkCard3.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's content.</p>
+                        <p class="card-text sansCollectionJ sandwichJ2 sandwichTxtJ">#1 Favorite <span class="sandwichJ">Grilled Pork</span> $5.79</p>
+                        <div class="row starRowJ">
+                            <img class="star2J" src="./assets/Star.png" alt="">
+                            <img class="star2J" src="./assets/Star.png" alt="">
+                            <img class="star2J" src="./assets/Star.png" alt="">
+                            <img class="star2J" src="./assets/Star.png" alt="">
+                            <img class="star2J" src="./assets/Star.png" alt="">
+                        </div>
                     </div>
                 </div>
             </div>
             <div class="col">
                 <div class="card cardJ" style="width: 280px;">
-                    <img src="./assets/drinkCard4.png" class="card-img-top" alt="..." style="object-position: 0px 20px;">
+                    <img src="./assets/drinkCard4.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's content.</p>
+                        <p class="card-text sansCollectionJ sandwichJ2 sandwichTxtJ">#1 Favorite <span class="sandwichJ">Grilled Pork</span> $5.79</p>
+                        <div class="row starRowJ">
+                            <img class="star2J" src="./assets/Star.png" alt="">
+                            <img class="star2J" src="./assets/Star.png" alt="">
+                            <img class="star2J" src="./assets/Star.png" alt="">
+                            <img class="star2J" src="./assets/Star.png" alt="">
+                            <img class="star2J" src="./assets/Star.png" alt="">
+                        </div>
                     </div>
                 </div>
             </div>
@@ -254,8 +313,14 @@
                 <div class="card cardJ" style="width: 280px;">
                     <img src="./assets/drinkCard5.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's content.</p>
+                        <p class="card-text sansCollectionJ sandwichJ2 sandwichTxtJ">#1 Favorite <span class="sandwichJ">Grilled Pork</span> $5.79</p>
+                        <div class="row starRowJ">
+                            <img class="star2J" src="./assets/Star.png" alt="">
+                            <img class="star2J" src="./assets/Star.png" alt="">
+                            <img class="star2J" src="./assets/Star.png" alt="">
+                            <img class="star2J" src="./assets/Star.png" alt="">
+                            <img class="star2J" src="./assets/Star.png" alt="">
+                        </div>
                     </div>
                 </div>
             </div>
