--- a/pages/AboutUs.html
+++ b/pages/AboutUs.html
@@ -61,14 +61,14 @@
 
     <div class="container-fluid bgWhiteJ" style="margin-top: -5px">
         <div class="row banhMiPaddingJ">
-            <div class="col centerJ">
-                <img src="../assets/Chef.png" alt="Picture of Chef" style="width: 55%;" />
+            <div class="col-12 col-md-6 centerJ">
+                <img class="chefJ" src="../assets/Chef.png" alt="Picture of Chef"/>
             </div>
             <div class="col">
-                <h2 class="abrilFatfaceJ footerFontSize3" style="padding-top: 50px">
+                <h2 class="abrilFatfaceJ aLittleAboutJ" style="padding-top: 50px">
                     A Little Bit About Best Sandwiches
                 </h2>
-                <p class="sansCollectionJ footerFontSize2" style="padding-top: 40px; line-height: 40px">
+                <p class="sansCollectionJ aLittleAboutJ2">
                     Welcome to Best Sandwiches & Smoothies, where Banh mi is not just a sandwich but a culinary masterpiece that tells the tale of Vietnam's rich flavors. Nestled in the heart of 3330 E Hammer Ln Ste C Stockton, CA 95212, our restaurant is a homage to the bustling street food scene of Hanoi. At Best Sandwiches & Smoothies, we take pride in curating an authentic experience, from the crackling crust of our freshly baked baguettes to the savory dance of traditional Vietnamese ingredients within.
                 </p>
             </div>
