--- a/pages/BanhMi.html
+++ b/pages/BanhMi.html
@@ -56,14 +56,14 @@
 
     <div class="container-fluid bgWhiteJ" style="margin-top: -5px">
         <div class="row banhMiPaddingJ">
-            <div class="col centerJ">
-                <img src="../assets/banh mi in ellipse.png" alt="Picture of Chef" style="width: 55%;" />
+            <div class="col-12 col-md-6 centerJ">
+                <img class="chefJ" src="../assets/banh mi in ellipse.png" alt="Picture of Banh Mi"/>
             </div>
             <div class="col">
-                <h2 class="abrilFatfaceJ footerFontSize3" style="padding-top: 50px">
-                    What’s A Banh Mi?
+                <h2 class="abrilFatfaceJ aLittleAboutJ" style="padding-top: 50px">
+                    What’s a Banh Mi?
                 </h2>
-                <p class="sansCollectionJ footerFontSize2" style="padding-top: 40px; line-height: 40px">
+                <p class="sansCollectionJ aLittleAboutJ2" >
                     You may be wondering what a banh mi is? Well a banh mi is basically
                     a short baguette with a very nice crisp crust and soft texture, but
                     Vietnamese style. The sandwich is usually split in half and filled
