--- a/pages/ContactUs.html
+++ b/pages/ContactUs.html
@@ -53,20 +53,20 @@
             </nav>
         </div>
 
-        <div class="row">
+        <div class="row contactRowJ">
             <div class="col bgWhiteJ">
-                <div class="row ">
+                <div class="row contactRowJ">
                     <div class="col-1">
 
                     </div>
                     <div class="col">
                         <div class="container-fluid">
                             <div class="row contactUsPaddingJ">
-                                <h2 class="abrilFatfaceJ" style="font-size: 48px;">Don’t Be Afraid To Give Us A Call
+                                <h2 class="abrilFatfaceJ contactRowJ dontBeAfraidJ">Don’t Be Afraid To Give Us A Call
                                 </h2>
                             </div>
-                            <div class="row contactUsPaddingJ2 dontBeAfraidBodySizeJ sansCollectionJ">
-                                <p>Want to order a delicious banh mi? We’d love to serve you some
+                            <div class="row contactUsPaddingJ2 dontBeAfraidBodySizeJ sansCollectionJ contactRowJ">
+                                <p class="contactRowJ">Want to order a delicious banh mi? We’d love to serve you some
                                     food. Here’s some
                                     information that’ll help you order a fantastic meal</p>
                             </div>
@@ -79,7 +79,7 @@
 
             </div>
             <div class="col">
-                <div class="row">
+                <div class="row contactRowJ">
                     <img class="phoneJ" src="../assets/Person using phone.png" alt="">
                 </div>
             </div>
@@ -87,7 +87,7 @@
 
 
         <div class="row contactBgJ evenJ" style="padding-top: 40px; padding-bottom: 45px">
-            <div class="card cardRadiusJ" style="width: 545px;">
+            <div class="card cardRadiusJ">
                 <div class="centerJ">
                     <img src="../assets/Alarm.png" class="card-img-top contactIconsJ" alt="...">
                 </div>
@@ -117,7 +117,7 @@
                                 Sunday:
                             </div>
                         </div>
-                        <div class="col sansCollectionJ contactUsBodySizeJ">
+                        <div class="col d-none d-md-block sansCollectionJ contactUsBodySizeJ">
                             <div class="row contactBodyTopPaddingJ">
                                 9:00 am - 5:00 pm
                             </div>
@@ -140,29 +140,51 @@
                                 9:00 am - 5:00 pm
                             </div>
                         </div>
+                        <div class="col d-block d-md-none sansCollectionJ contactUsBodySizeJ2">
+                            <div class="row contactBodyTopPaddingJ">
+                                9 am - 5 pm
+                            </div>
+                            <div class="row contactRowPadding2J">
+                                9 am - 5 pm
+                            </div>
+                            <div class="row redJ contactRowPadding2J">
+                                CLOSED
+                            </div>
+                            <div class="row contactRowPadding2J">
+                                9 am - 5 pm
+                            </div>
+                            <div class="row contactRowPadding2J">
+                                9 am - 5 pm
+                            </div>
+                            <div class="row contactRowPadding2J">
+                                9 am - 5 pm
+                            </div>
+                            <div class="row contactRowPadding2J" style="padding-bottom: 15px;">
+                                9 am - 5 pm
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="card cardRadiusJ" style="width: 545px;">
+            <div class="card cardRadiusJ">
                 <div class="centerJ">
                     <img src="../assets/PhoneCall.png" class="card-img-top contactIconsJ" alt="...">
                 </div>
                 <div class="card-body">
                     <h3 class="txtCenterJ dontBeAfraidBodySizeJ abrilFatfaceJ">ORDER OVER THE PHONE</h3>
                     <div class="centerJ contactBodyTopPaddingJ">
-                        <p class="card-text txtCenterJ contactUsBodySizeJ sansCollectionJ center " style="width: 80%;">
+                        <p class="card-text txtCenterJ contactUsBodySizeJ sansCollectionJ center orderTextJ">
                             Interested in showing up and having your order ready for you? Give
                             us a call and give us your order over the phone</p>
                     </div>
 
                     <div class="centerJ">
-                        <a href="" class="card-text txtCenterJ sansCollectionJ blueJ"
-                            style="padding-top: 70px; text-decoration: none;">(209) 475-0652</a>
+                        <a href="" class="card-text txtCenterJ sansCollectionJ blueJ">(209) 475-0652</a>
                     </div>
 
                 </div>
             </div>
-            <div class="card cardRadiusJ" style="width: 545px;">
+            <div class="card cardRadiusJ">
                 <div class="centerJ">
                     <img src="../assets/MapPin.png" class="card-img-top contactIconsJ" alt="...">
                 </div>
@@ -170,14 +192,13 @@
                 <div class="card-body">
                     <h3 class="txtCenterJ dontBeAfraidBodySizeJ abrilFatfaceJ">ORDER IN PERSON</h3>
                     <div class="centerJ">
-                        <p class="card-text txtCenterJ contactUsBodySizeJ sansCollectionJ contactBodyTopPaddingJ">
+                        <p class="card-text txtCenterJ contactUsBodySizeJ sansCollectionJ contactBodyTopPaddingJ orderTextJ2">
                             Are you not in the mood to make a phone call or you aren’t much of
                             an online person? If so, that’s completely fine, feel free to head to our establishment and
                             order at the register</p>
                     </div>
                     <div class="centerJ">
-                        <a href="" class="card-text txtCenterJ sansCollectionJ blueJ"
-                            style="padding-top: 25px; width: 80%; text-decoration: none;">3330 E Hammer Ln Ste C
+                        <a href="" class="card-text txtCenterJ sansCollectionJ blueJ2">3330 E Hammer Ln Ste C
                             Stockton, CA 95212</a>
                     </div>
 
@@ -190,7 +211,7 @@
 
     <hr class="yellowJ hrLineJ mt-4">
 
-    <div class="container-fluid footerPaddingJ">
+    <div class="container-fluid footerPaddingJ desktopFooter">
         <div class="row" style="padding-top: 45px; padding-bottom: 20px;">
             <div class="col-4" style="padding-left: 3%;">
                 <div class="row yellowJ abrilFatfaceJ">
