--- a/pages/ContactUs.html
+++ b/pages/ContactUs.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title></title>
+    <title>Contact Us</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="../styles/style.css">
@@ -211,7 +211,7 @@
 
     <hr class="yellowJ hrLineJ mt-4">
 
-    <div class="container-fluid footerPaddingJ desktopFooter">
+    <div class="container-fluid footerPaddingJ disappearJ">
         <div class="row" style="padding-top: 45px; padding-bottom: 20px;">
             <div class="col-4" style="padding-left: 3%;">
                 <div class="row yellowJ abrilFatfaceJ">
@@ -235,9 +235,9 @@
                     <div class="col">
                         <div class="row">
                             <p class="yellowJ abrilFatfaceJ footerFontSize2">CONTACT US</p>
-                            <p class="yellowJ footerFontSize">Mon & Tue : 9 am - 5 pm</p>
-                            <p class="yellowJ footerFontSize">CLOSED WEDNESDAY</p>
-                            <p class="yellowJ footerFontSize">Thu - Sun : 9 am - 5pm</p>
+                            <p class="yellowJ footerFontSize"><img src="../assets/phone symbol.png" alt=""><a class="yellowJ" href="" style="padding-left: 15px;">(209) 475-0652</a></p>
+                            <p class="yellowJ footerFontSize">3330 E Hammer Ln Ste</p>
+                            <p class="yellowJ footerFontSize">C Stockton, CA 95212</p>
                         </div>
                     </div>
 
