--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
                 <div class="card cardJ" style="width: 280px;">
                     <img src="./assets/drinkCard4.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <p class="card-text sansCollectionJ sandwichJ2 avocadoTxtJ">#1 Recommended <span class="sandwichJ">Appealing Avocado</span> $5.79</p>
+                        <p class="card-text sansCollectionJ sandwichJ2 avocadoTxtJ">#1 Recommended <span class="sandwichJ">Appealing Avocado</span> $5.89</p>
                         <div class="row starRowJ">
                             <img class="star2J" src="./assets/Star.png" alt="">
                             <img class="star2J" src="./assets/Star.png" alt="">
@@ -313,7 +313,7 @@
                 <div class="card cardJ" style="width: 280px;">
                     <img src="./assets/drinkCard5.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <p class="card-text sansCollectionJ sandwichJ2 honeyDewTxtJ">#1 Favorite <span class="sandwichJ">Grilled Pork</span> $5.79</p>
+                        <p class="card-text sansCollectionJ sandwichJ2 greenTeaTxtJ">#2 Recommended <span class="sandwichJ"> HoneyDew Milk Tea</span> $5.69</p>
                         <div class="row starRowJ">
                             <img class="star2J" src="./assets/Star.png" alt="">
                             <img class="star2J" src="./assets/Star.png" alt="">
