--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@
     <h1 class="absoluteJ whiteJ sloganJ sansCollectionJ" style="width: 1040px;">"A banh mi a day keeps the hunger away"
     </h1>
 
-    <a class="absoluteJ viewMenuJ" href="#menu"><button class="btn btn-primary viewMenuBtnJ sansCollectionJ">View Menu</button></a>
+    <a class="absoluteJ viewMenuJ" href="#menu"><button class="btn btn-primary viewMenuBtnJ sansCollectionJ">View
+            Menu</button></a>
 
     <div class="container-fluid bgWhiteJ" style="padding-top: 50px; padding-bottom: 100px;">
         <div class="row">
@@ -109,7 +110,8 @@
                 </div>
 
                 <div class="row" style="padding-top: 75px;">
-                    <a class="centerJ" href="./pages/ContactUs.html"><button class="btn btn-primary" style="width: 270px; height: 100px;">Learn More</button></a>
+                    <a class="centerJ" href="./pages/ContactUs.html"><button class="btn btn-primary"
+                            style="width: 270px; height: 100px;">Learn More</button></a>
                 </div>
 
 
@@ -140,11 +142,12 @@
                 <div class="row" style="margin-top: 5px">
                     <h1 class="whiteJ abrilFatfaceJ" style="width: 300px; line-height: 57px;">Popular Sandwiches</h1>
                 </div>
-                
+
 
             </div>
             <div class="col-8">
-                <p id="menu" class="whiteJ foodInfoJ sansCollectionJ">At best sandwiches we offer the many sandwiches that are apart of the Vietnamese
+                <p id="menu" class="whiteJ foodInfoJ sansCollectionJ">At best sandwiches we offer the many sandwiches
+                    that are apart of the Vietnamese
                     cuisine. Don’t be afraid to order yourself a sandwich and give it a try, because I guarantee that
                     you won’t regret it!. Down below are our top 5 popular sandwiches.</p>
             </div>
@@ -154,7 +157,8 @@
                 <div class="card cardJ" style="width: 280px;">
                     <img src="./assets/banhMiCard1.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <p class="card-text sansCollectionJ sandwichJ2 sandwichTxtJ">#1 Favorite <span class="sandwichJ">Grilled Pork</span> $5.79</p>
+                        <p class="card-text sansCollectionJ sandwichJ2 sandwichTxtJ">#1 Favorite <span
+                                class="sandwichJ">Grilled Pork</span> $5.79</p>
                         <div class="row starRowJ">
                             <img class="star2J" src="./assets/Star.png" alt="">
                             <img class="star2J" src="./assets/Star.png" alt="">
@@ -169,7 +173,8 @@
                 <div class="card cardJ" style="width: 280px;">
                     <img src="./assets/banhMiCard2.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <p class="card-text sansCollectionJ sandwichJ2 sandwichTxtJ">#1 Diet Friendly <span class="sandwichJ">Vegetarian</span> $5.79</p>
+                        <p class="card-text sansCollectionJ sandwichJ2 sandwichTxtJ">#1 Diet Friendly <span
+                                class="sandwichJ">Vegetarian</span> $5.79</p>
                         <div class="row starRowJ">
                             <img class="star2J" src="./assets/Star.png" alt="">
                             <img class="star2J" src="./assets/Star.png" alt="">
@@ -184,7 +189,8 @@
                 <div class="card cardJ" style="width: 280px;">
                     <img src="./assets/BanhMiCard3.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <p class="card-text sansCollectionJ sandwichJ2 sandwichTxtJ">#1 Favorite <span class="sandwichJ">Grilled Pork</span> $5.79</p>
+                        <p class="card-text sansCollectionJ sandwichJ2 sandwichTxtJ">#1 Favorite <span
+                                class="sandwichJ">Grilled Pork</span> $5.79</p>
                         <div class="row starRowJ">
                             <img class="star2J" src="./assets/Star.png" alt="">
                             <img class="star2J" src="./assets/Star.png" alt="">
@@ -199,7 +205,8 @@
                 <div class="card cardJ" style="width: 280px;">
                     <img src="./assets/banhMiCard4.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <p class="card-text sansCollectionJ sandwichJ2 sandwichTxtJ">#1 Favorite <span class="sandwichJ">Grilled Pork</span> $5.79</p>
+                        <p class="card-text sansCollectionJ sandwichJ2 sandwichTxtJ">#1 Favorite <span
+                                class="sandwichJ">Grilled Pork</span> $5.79</p>
                         <div class="row starRowJ">
                             <img class="star2J" src="./assets/Star.png" alt="">
                             <img class="star2J" src="./assets/Star.png" alt="">
@@ -214,7 +221,8 @@
                 <div class="card cardJ" style="width: 280px;">
                     <img src="./assets/banhMiCard5.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <p class="card-text sansCollectionJ sandwichJ2 sandwichTxtJ">#1 Favorite <span class="sandwichJ">Grilled Pork</span> $5.79</p>
+                        <p class="card-text sansCollectionJ sandwichJ2 sandwichTxtJ">#1 Favorite <span
+                                class="sandwichJ">Grilled Pork</span> $5.79</p>
                         <div class="row starRowJ">
                             <img class="star2J" src="./assets/Star.png" alt="">
                             <img class="star2J" src="./assets/Star.png" alt="">
@@ -242,7 +250,8 @@
 
             </div>
             <div class="col-8">
-                <p class="whiteJ foodInfoJ sansCollectionJ">We don’t just offer sandwiches, we also offer tasty drinks! We have a wide variety of
+                <p class="whiteJ foodInfoJ sansCollectionJ">We don’t just offer sandwiches, we also offer tasty drinks!
+                    We have a wide variety of
                     drinks and just like the sandwiches you won’t regret ordering yourself a drink. I personally
                     recommend any of the 5 drinks below, because I don’t think you can go wrong with any of those
                     options.</p>
@@ -253,7 +262,8 @@
                 <div class="card cardJ" style="width: 280px;">
                     <img src="./assets/drinkCard1.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <p class="card-text sansCollectionJ sandwichJ2 taroTxtJ">#1 Favorite <span class="sandwichJ">Tangy Taro</span> $5.89</p>
+                        <p class="card-text sansCollectionJ sandwichJ2 taroTxtJ">#1 Favorite <span
+                                class="sandwichJ">Tangy Taro</span> $5.89</p>
                         <div class="row starRowJ">
                             <img class="star2J" src="./assets/Star.png" alt="">
                             <img class="star2J" src="./assets/Star.png" alt="">
@@ -268,7 +278,8 @@
                 <div class="card cardJ" style="width: 280px;">
                     <img src="./assets/drinkCard2.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <p class="card-text sansCollectionJ sandwichJ2 greenTeaTxtJ">"The Go To Drink" <span class="sandwichJ">Green Tea Gangbusters</span> $5.89</p>
+                        <p class="card-text sansCollectionJ sandwichJ2 greenTeaTxtJ">"The Go To Drink" <span
+                                class="sandwichJ">Green Tea Gangbusters</span> $5.89</p>
                         <div class="row starRowJ">
                             <img class="star2J" src="./assets/Star.png" alt="">
                             <img class="star2J" src="./assets/Star.png" alt="">
@@ -283,7 +294,8 @@
                 <div class="card cardJ" style="width: 280px;">
                     <img src="./assets/drinkCard3.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <p class="card-text sansCollectionJ sandwichJ2 thaiTeaTxtJ">Top Seller <span class="sandwichJ">Iced Thai Tea</span> $5.69</p>
+                        <p class="card-text sansCollectionJ sandwichJ2 thaiTeaTxtJ">Top Seller <span
+                                class="sandwichJ">Iced Thai Tea</span> $5.69</p>
                         <div class="row starRowJ">
                             <img class="star2J" src="./assets/Star.png" alt="">
                             <img class="star2J" src="./assets/Star.png" alt="">
@@ -298,7 +310,8 @@
                 <div class="card cardJ" style="width: 280px;">
                     <img src="./assets/drinkCard4.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <p class="card-text sansCollectionJ sandwichJ2 avocadoTxtJ">#1 Recommended <span class="sandwichJ">Appealing Avocado</span> $5.89</p>
+                        <p class="card-text sansCollectionJ sandwichJ2 avocadoTxtJ">#1 Recommended <span
+                                class="sandwichJ">Appealing Avocado</span> $5.89</p>
                         <div class="row starRowJ">
                             <img class="star2J" src="./assets/Star.png" alt="">
                             <img class="star2J" src="./assets/Star.png" alt="">
@@ -313,7 +326,8 @@
                 <div class="card cardJ" style="width: 280px;">
                     <img src="./assets/drinkCard5.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <p class="card-text sansCollectionJ sandwichJ2 greenTeaTxtJ">#2 Recommended <span class="sandwichJ"> HoneyDew Milk Tea</span> $5.69</p>
+                        <p class="card-text sansCollectionJ sandwichJ2 greenTeaTxtJ">#2 Recommended <span
+                                class="sandwichJ"> HoneyDew Milk Tea</span> $5.69</p>
                         <div class="row starRowJ">
                             <img class="star2J" src="./assets/Star.png" alt="">
                             <img class="star2J" src="./assets/Star.png" alt="">
